<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <EditText
        android:id="@+id/etRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/txt1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt2"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/etRoom"
        app:layout_constraintTop_toBottomOf="@+id/etRoom" />

    <EditText
        android:id="@+id/etAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt3"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/etTemp"
        app:layout_constraintTop_toBottomOf="@+id/etTemp" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt4"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/etAir"
        app:layout_constraintTop_toBottomOf="@+id/etAir" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="350dp"
        android:layout_height="308dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_delete"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="29dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="212dp"
        android:layout_height="45dp"
        android:onClick="onClickButton"
        android:text="@string/btn"
        app:layout_constraintStart_toStartOf="@+id/etDate"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <EditText
        android:id="@+id/edit_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:hint="@string/hintDelete"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/etRoom"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:text="@string/filterDelete"
        app:layout_constraintBottom_toBottomOf="@+id/edit_delete"
        app:layout_constraintStart_toStartOf="@+id/btnAdd" />


</androidx.constraintlayout.widget.ConstraintLayout>